--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                         <div class="item-slider-max-5 item-slider">
                             <div class="card-item">
                                 <div class="card product-wrpper">
-                                    <div class="item-image" style="background-image: url(/assets/item-image/item-1.jpg);">
+                                    <div class="item-image" style="background-image: url(./assets/item-image/item-1.jpg);">
                                         <div class="product-settings">
                                             <i class="fas fa-search-plus"></i>
                                             <i class="fas fa-heart"></i>
@@ -225,7 +225,7 @@
                             </div>
                             <div class="card-item">
                                 <div class="card product-wrpper">
-                                    <div class="item-image" style="background-image: url(/assets/item-image/item-1.jpg);">
+                                    <div class="item-image" style="background-image: url(./assets/item-image/item-1.jpg);">
                                         <div class="product-settings">
                                             <i class="fas fa-search-plus"></i>
                                             <i class="fas fa-heart"></i>
@@ -245,7 +245,7 @@
                             </div>
                             <div class="card-item">
                                 <div class="card product-wrpper">
-                                    <div class="item-image" style="background-image: url(/assets/item-image/item-1.jpg);">
+                                    <div class="item-image" style="background-image: url(./assets/item-image/item-1.jpg);">
                                         <div class="product-settings">
                                             <i class="fas fa-search-plus"></i>
                                             <i class="fas fa-heart"></i>
@@ -265,7 +265,7 @@
                             </div>
                             <div class="card-item">
                                 <div class="card product-wrpper">
-                                    <div class="item-image" style="background-image: url(/assets/item-image/item-1.jpg);">
+                                    <div class="item-image" style="background-image: url(./assets/item-image/item-1.jpg);">
                                         <div class="product-settings">
                                             <i class="fas fa-search-plus"></i>
                                             <i class="fas fa-heart"></i>
@@ -285,7 +285,7 @@
                             </div>
                             <div class="card-item">
                                 <div class="card product-wrpper">
-                                    <div class="item-image" style="background-image: url(/assets/item-image/item-1.jpg);">
+                                    <div class="item-image" style="background-image: url(./assets/item-image/item-1.jpg);">
                                         <div class="product-settings">
                                             <i class="fas fa-search-plus"></i>
                                             <i class="fas fa-heart"></i>
@@ -325,7 +325,7 @@
                         <div class="item-slider-max-5 item-slider">
                             <div class="card-item">
                                 <div class="card product-wrpper">
-                                    <div class="item-image" style="background-image: url(/assets/item-image/item-1.jpg);">
+                                    <div class="item-image" style="background-image: url(./assets/item-image/item-1.jpg);">
                                         <div class="product-settings">
                                             <i class="fas fa-search-plus"></i>
                                             <i class="fas fa-heart"></i>
@@ -347,7 +347,7 @@
                             </div>
                             <div class="card-item">
                                 <div class="card product-wrpper">
-                                    <div class="item-image" style="background-image: url(/assets/item-image/item-1.jpg);">
+                                    <div class="item-image" style="background-image: url(./assets/item-image/item-1.jpg);">
                                         <div class="product-settings">
                                             <i class="fas fa-search-plus"></i>
                                             <i class="fas fa-heart"></i>
@@ -369,7 +369,7 @@
                             </div>
                             <div class="card-item">
                                 <div class="card product-wrpper">
-                                    <div class="item-image" style="background-image: url(/assets/item-image/item-1.jpg);">
+                                    <div class="item-image" style="background-image: url(./assets/item-image/item-1.jpg);">
                                         <div class="product-settings">
                                             <i class="fas fa-search-plus"></i>
                                             <i class="fas fa-heart"></i>
@@ -391,7 +391,7 @@
                             </div>
                             <div class="card-item">
                                 <div class="card product-wrpper">
-                                    <div class="item-image" style="background-image: url(/assets/item-image/item-1.jpg);">
+                                    <div class="item-image" style="background-image: url(./assets/item-image/item-1.jpg);">
                                         <div class="product-settings">
                                             <i class="fas fa-search-plus"></i>
                                             <i class="fas fa-heart"></i>
@@ -413,7 +413,7 @@
                             </div>
                             <div class="card-item">
                                 <div class="card product-wrpper">
-                                    <div class="item-image" style="background-image: url(/assets/item-image/item-1.jpg);">
+                                    <div class="item-image" style="background-image: url(./assets/item-image/item-1.jpg);">
                                         <div class="product-settings">
                                             <i class="fas fa-search-plus"></i>
                                             <i class="fas fa-heart"></i>
@@ -435,7 +435,7 @@
                             </div>
                             <div class="card-item">
                                 <div class="card product-wrpper">
-                                    <div class="item-image" style="background-image: url(/assets/item-image/item-1.jpg);">
+                                    <div class="item-image" style="background-image: url(./assets/item-image/item-1.jpg);">
                                         <div class="product-settings">
                                             <i class="fas fa-search-plus"></i>
                                             <i class="fas fa-heart"></i>
@@ -457,7 +457,7 @@
                             </div>
                             <div class="card-item">
                                 <div class="card product-wrpper">
-                                    <div class="item-image" style="background-image: url(/assets/item-image/item-1.jpg);">
+                                    <div class="item-image" style="background-image: url(./assets/item-image/item-1.jpg);">
                                         <div class="product-settings">
                                             <i class="fas fa-search-plus"></i>
                                             <i class="fas fa-heart"></i>
@@ -479,7 +479,7 @@
                             </div>
                             <div class="card-item">
                                 <div class="card product-wrpper">
-                                    <div class="item-image" style="background-image: url(/assets/item-image/item-1.jpg);">
+                                    <div class="item-image" style="background-image: url(./assets/item-image/item-1.jpg);">
                                         <div class="product-settings">
                                             <i class="fas fa-search-plus"></i>
                                             <i class="fas fa-heart"></i>
