--- a/product-page.html
+++ b/product-page.html
@@ -82,17 +82,17 @@
                 <div class="col-lg-7 col-md-6 col-12">
                     <div class="product-gallery-wrapper">
                         <div class="product-image">
-                            <img src="/assets/item-image/item-4.jpg" alt="">
+                            <img src="./assets/item-image/item-4.jpg" alt="">
                         </div>
                         <div class="product-gallery-image-wrapper">
                             <div class="product-gallery-images">
-                                <img src="/assets/item-image/item-3.jpg" alt="image">
-                                <img src="/assets/item-image/item-3.jpg" alt="image">
-                                <img src="/assets/item-image/item-3.jpg" alt="image">
-                                <img src="/assets/item-image/item-3.jpg" alt="image">
-                                <img src="/assets/item-image/item-3.jpg" alt="image">
-                                <img src="/assets/item-image/item-3.jpg" alt="image">
-                                <img src="/assets/item-image/item-3.jpg" alt="image">
+                                <img src="./assets/item-image/item-3.jpg" alt="image">
+                                <img src="./assets/item-image/item-3.jpg" alt="image">
+                                <img src="./assets/item-image/item-3.jpg" alt="image">
+                                <img src="./assets/item-image/item-3.jpg" alt="image">
+                                <img src="./assets/item-image/item-3.jpg" alt="image">
+                                <img src="./assets/item-image/item-3.jpg" alt="image">
+                                <img src="./assets/item-image/item-3.jpg" alt="image">
                             </div>
                         </div>
                     </div>
@@ -197,7 +197,7 @@
                         <div class="item-slider-max-5 item-slider">
                             <div class="card-item">
                                 <div class="card product-wrpper">
-                                    <div class="item-image" style="background-image: url(/assets/item-image/item-1.jpg);">
+                                    <div class="item-image" style="background-image: url(./assets/item-image/item-1.jpg);">
                                         <div class="product-settings">
                                             <i class="fas fa-search-plus"></i>
                                             <i class="fas fa-heart"></i>
@@ -219,7 +219,7 @@
                             </div>
                             <div class="card-item">
                                 <div class="card product-wrpper">
-                                    <div class="item-image" style="background-image: url(/assets/item-image/item-1.jpg);">
+                                    <div class="item-image" style="background-image: url(./assets/item-image/item-1.jpg);">
                                         <div class="product-settings">
                                             <i class="fas fa-search-plus"></i>
                                             <i class="fas fa-heart"></i>
@@ -241,7 +241,7 @@
                             </div>
                             <div class="card-item">
                                 <div class="card product-wrpper">
-                                    <div class="item-image" style="background-image: url(/assets/item-image/item-1.jpg);">
+                                    <div class="item-image" style="background-image: url(./assets/item-image/item-1.jpg);">
                                         <div class="product-settings">
                                             <i class="fas fa-search-plus"></i>
                                             <i class="fas fa-heart"></i>
@@ -263,7 +263,7 @@
                             </div>
                             <div class="card-item">
                                 <div class="card product-wrpper">
-                                    <div class="item-image" style="background-image: url(/assets/item-image/item-1.jpg);">
+                                    <div class="item-image" style="background-image: url(./assets/item-image/item-1.jpg);">
                                         <div class="product-settings">
                                             <i class="fas fa-search-plus"></i>
                                             <i class="fas fa-heart"></i>
@@ -285,7 +285,7 @@
                             </div>
                             <div class="card-item">
                                 <div class="card product-wrpper">
-                                    <div class="item-image" style="background-image: url(/assets/item-image/item-1.jpg);">
+                                    <div class="item-image" style="background-image: url(./assets/item-image/item-1.jpg);">
                                         <div class="product-settings">
                                             <i class="fas fa-search-plus"></i>
                                             <i class="fas fa-heart"></i>
@@ -307,7 +307,7 @@
                             </div>
                             <div class="card-item">
                                 <div class="card product-wrpper">
-                                    <div class="item-image" style="background-image: url(/assets/item-image/item-1.jpg);">
+                                    <div class="item-image" style="background-image: url(./assets/item-image/item-1.jpg);">
                                         <div class="product-settings">
                                             <i class="fas fa-search-plus"></i>
                                             <i class="fas fa-heart"></i>
@@ -329,7 +329,7 @@
                             </div>
                             <div class="card-item">
                                 <div class="card product-wrpper">
-                                    <div class="item-image" style="background-image: url(/assets/item-image/item-1.jpg);">
+                                    <div class="item-image" style="background-image: url(./assets/item-image/item-1.jpg);">
                                         <div class="product-settings">
                                             <i class="fas fa-search-plus"></i>
                                             <i class="fas fa-heart"></i>
@@ -351,7 +351,7 @@
                             </div>
                             <div class="card-item">
                                 <div class="card product-wrpper">
-                                    <div class="item-image" style="background-image: url(/assets/item-image/item-1.jpg);">
+                                    <div class="item-image" style="background-image: url(./assets/item-image/item-1.jpg);">
                                         <div class="product-settings">
                                             <i class="fas fa-search-plus"></i>
                                             <i class="fas fa-heart"></i>
