--- a/category-page.html
+++ b/category-page.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-dark justify-content-between d-flex">
-            <a class="navbar-brand my-1" href="index.html"><img src="assets/logo/logo.png" alt=""></a>
+            <a class="navbar-brand my-1" href="index.html"><img src="./assets/logo/logo.png" alt=""></a>
             <div class="contact-information my-1">
                 <i class="fas fa-phone-square-alt"></i>
                 <p>+7 940 725 625 85</p>
