--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-dark justify-content-between d-flex">
-            <a class="navbar-brand my-1" href="index.html"><img src="assets/logo/logo.png" alt=""></a>
+            <a class="navbar-brand my-1" href="index.html"><img src="./assets/logo/logo.png" alt=""></a>
             <div class="contact-information my-1">
                 <div class="contact-phone">
                     <i class="fas fa-phone-square-alt"></i>
@@ -89,13 +89,13 @@
             </ol>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img class="d-block w-100" src="assets/slider-images/slider-image-1.jpg" alt="First slide">
+                <img class="d-block w-100" src="./assets/slider-images/slider-image-1.jpg" alt="First slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="assets/slider-images/slider-image-2.jpg" alt="Second slide">
+                <img class="d-block w-100" src="./assets/slider-images/slider-image-2.jpg" alt="Second slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="assets/slider-images/slider-image-3.jpg" alt="Third slide">
+                <img class="d-block w-100" src="./assets/slider-images/slider-image-3.jpg" alt="Third slide">
               </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
