--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                         <div class="col-xl-4 col-lg-4 col-md-4 col-6">
                             <div class="card-category">
                                 <div class="card">
-                                    <div class="card-image card-image-bedroom"></div>
+                                    <div class="card-image" style="background-image: url(./assets/item-image/item-1.jpg);"></div>
                                     <div class="card-body">
                                         <h5 class="card-title">category name</h5>
                                     </div>
@@ -132,7 +132,7 @@
                         <div class="col-xl-4 col-lg-4 col-md-4 col-6">
                             <div class="card-category">
                                 <div class="card">
-                                    <div class="card-image card-image-garderob"></div>
+                                    <div class="card-image" style="background-image: url(./assets/item-image/item-2.jpg);"></div>
                                     <div class="card-body">
                                         <h5 class="card-title">category name</h5>
                                     </div>
@@ -142,7 +142,7 @@
                         <div class="col-xl-4 col-lg-4 col-md-4 col-6">
                             <div class="card-category">
                                 <div class="card">
-                                    <div class="card-image card-image-kids-room"></div>
+                                    <div class="card-image" style="background-image: url(./assets/item-image/item-3.jpg);"></div>
                                     <div class="card-body">
                                         <h5 class="card-title">category name</h5>
                                     </div>
@@ -152,7 +152,7 @@
                         <div class="col-xl-4 col-lg-4 col-md-4 col-6">
                             <div class="card-category">
                                 <div class="card">
-                                    <div class="card-image card-image-living-room"></div>
+                                    <div class="card-image" style="background-image: url(./assets/item-image/item-2.jpg);"></div>
                                     <div class="card-body">
                                         <h5 class="card-title">category name</h5>
                                     </div>
@@ -162,7 +162,7 @@
                         <div class="col-xl-4 col-lg-4 col-md-4 col-6">
                             <div class="card-category">
                                 <div class="card">
-                                    <div class="card-image card-image-kitchen"></div>
+                                    <div class="card-image" style="background-image: url(./assets/item-image/item-4.jpg);"></div>
                                     <div class="card-body">
                                         <h5 class="card-title">category name</h5>
                                     </div>
@@ -172,7 +172,7 @@
                         <div class="col-xl-4 col-lg-4 col-md-4 col-6">
                             <div class="card-category">
                                 <div class="card">
-                                    <div class="card-image card-image-bedroom"></div>
+                                    <div class="card-image" style="background-image: url(./assets/item-image/item-5.jpg);"></div>
                                     <div class="card-body">
                                         <h5 class="card-title">category name</h5>
                                     </div>
