--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                                         </div>
                                         <hr class="my-2">
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, delectus. Dolor eum aut nam totam.</p>
-                                        <a href="#" class="btn btn-primary my-2">Go to product</a>
+                                        <a href="https://tigransaharian.github.io/Furniture-shop/product-page.html" class="btn btn-primary my-2">Go to product</a>
                                     </div>
                                 </div>
                             </div>
@@ -239,7 +239,7 @@
                                         </div>
                                         <hr class="my-2">
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, delectus. Dolor eum aut nam totam.</p>
-                                        <a href="#" class="btn btn-primary my-2">Go to product</a>
+                                        <a href="https://tigransaharian.github.io/Furniture-shop/product-page.html" class="btn btn-primary my-2">Go to product</a>
                                     </div>
                                 </div>
                             </div>
@@ -259,7 +259,7 @@
                                         </div>
                                         <hr class="my-2">
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, delectus. Dolor eum aut nam totam.</p>
-                                        <a href="#" class="btn btn-primary my-2">Go to product</a>
+                                        <a href="https://tigransaharian.github.io/Furniture-shop/product-page.html" class="btn btn-primary my-2">Go to product</a>
                                     </div>
                                 </div>
                             </div>
@@ -279,7 +279,7 @@
                                         </div>
                                         <hr class="my-2">
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, delectus. Dolor eum aut nam totam.</p>
-                                        <a href="#" class="btn btn-primary my-2">Go to product</a>
+                                        <a href="https://tigransaharian.github.io/Furniture-shop/product-page.html" class="btn btn-primary my-2">Go to product</a>
                                     </div>
                                 </div>
                             </div>
@@ -299,7 +299,7 @@
                                         </div>
                                         <hr class="my-2">
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, delectus. Dolor eum aut nam totam.</p>
-                                        <a href="#" class="btn btn-primary my-2">Go to product</a>
+                                        <a href="https://tigransaharian.github.io/Furniture-shop/product-page.html" class="btn btn-primary my-2">Go to product</a>
                                     </div>
                                 </div>
                             </div>
@@ -341,7 +341,7 @@
                                         </div>
                                         <hr class="my-2">
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, delectus. Dolor eum aut nam totam.</p>
-                                        <a href="#" class="btn btn-primary my-2">Go to product</a>
+                                        <a href="https://tigransaharian.github.io/Furniture-shop/product-page.html" class="btn btn-primary my-2">Go to product</a>
                                     </div>
                                 </div>
                             </div>
@@ -363,7 +363,7 @@
                                         </div>
                                         <hr class="my-2">
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, delectus. Dolor eum aut nam totam.</p>
-                                        <a href="#" class="btn btn-primary my-2">Go to product</a>
+                                        <a href="https://tigransaharian.github.io/Furniture-shop/product-page.html" class="btn btn-primary my-2">Go to product</a>
                                     </div>
                                 </div>
                             </div>
@@ -385,7 +385,7 @@
                                         </div>
                                         <hr class="my-2">
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, delectus. Dolor eum aut nam totam.</p>
-                                        <a href="#" class="btn btn-primary my-2">Go to product</a>
+                                        <a href="https://tigransaharian.github.io/Furniture-shop/product-page.html" class="btn btn-primary my-2">Go to product</a>
                                     </div>
                                 </div>
                             </div>
@@ -407,7 +407,7 @@
                                         </div>
                                         <hr class="my-2">
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, delectus. Dolor eum aut nam totam.</p>
-                                        <a href="#" class="btn btn-primary my-2">Go to product</a>
+                                        <a href="https://tigransaharian.github.io/Furniture-shop/product-page.html" class="btn btn-primary my-2">Go to product</a>
                                     </div>
                                 </div>
                             </div>
@@ -429,7 +429,7 @@
                                         </div>
                                         <hr class="my-2">
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, delectus. Dolor eum aut nam totam.</p>
-                                        <a href="#" class="btn btn-primary my-2">Go to product</a>
+                                        <a href="https://tigransaharian.github.io/Furniture-shop/product-page.html" class="btn btn-primary my-2">Go to product</a>
                                     </div>
                                 </div>
                             </div>
@@ -451,7 +451,7 @@
                                         </div>
                                         <hr class="my-2">
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, delectus. Dolor eum aut nam totam.</p>
-                                        <a href="#" class="btn btn-primary my-2">Go to product</a>
+                                        <a href="https://tigransaharian.github.io/Furniture-shop/product-page.html" class="btn btn-primary my-2">Go to product</a>
                                     </div>
                                 </div>
                             </div>
@@ -473,7 +473,7 @@
                                         </div>
                                         <hr class="my-2">
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, delectus. Dolor eum aut nam totam.</p>
-                                        <a href="#" class="btn btn-primary my-2">Go to product</a>
+                                        <a href="https://tigransaharian.github.io/Furniture-shop/product-page.html" class="btn btn-primary my-2">Go to product</a>
                                     </div>
                                 </div>
                             </div>
@@ -495,7 +495,7 @@
                                         </div>
                                         <hr class="my-2">
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, delectus. Dolor eum aut nam totam.</p>
-                                        <a href="#" class="btn btn-primary my-2">Go to product</a>
+                                        <a href="https://tigransaharian.github.io/Furniture-shop/product-page.html" class="btn btn-primary my-2">Go to product</a>
                                     </div>
                                 </div>
                             </div>
