--- a/product-list-page.html
+++ b/product-list-page.html
@@ -106,7 +106,7 @@
                                     </div>
                                     <hr class="my-2">
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, delectus. Dolor eum aut nam totam.</p>
-                                    <a href="#" class="btn btn-primary my-2">Go to product</a>
+                                    <a href="https://tigransaharian.github.io/Furniture-shop/product-page.html" class="btn btn-primary my-2">Go to product</a>
                                 </div>
                             </div>
                         </div>
@@ -128,7 +128,7 @@
                                     </div>
                                     <hr class="my-2">
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, delectus. Dolor eum aut nam totam.</p>
-                                    <a href="#" class="btn btn-primary my-2">Go to product</a>
+                                    <a href="https://tigransaharian.github.io/Furniture-shop/product-page.html" class="btn btn-primary my-2">Go to product</a>
                                 </div>
                             </div>
                         </div>
@@ -150,7 +150,7 @@
                                     </div>
                                     <hr class="my-2">
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, delectus. Dolor eum aut nam totam.</p>
-                                    <a href="#" class="btn btn-primary my-2">Go to product</a>
+                                    <a href="https://tigransaharian.github.io/Furniture-shop/product-page.html" class="btn btn-primary my-2">Go to product</a>
                                 </div>
                             </div>
                         </div>
@@ -172,7 +172,7 @@
                                     </div>
                                     <hr class="my-2">
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, delectus. Dolor eum aut nam totam.</p>
-                                    <a href="#" class="btn btn-primary my-2">Go to product</a>
+                                    <a href="https://tigransaharian.github.io/Furniture-shop/product-page.html" class="btn btn-primary my-2">Go to product</a>
                                 </div>
                             </div>
                         </div>
@@ -194,7 +194,7 @@
                                     </div>
                                     <hr class="my-2">
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, delectus. Dolor eum aut nam totam.</p>
-                                    <a href="#" class="btn btn-primary my-2">Go to product</a>
+                                    <a href="https://tigransaharian.github.io/Furniture-shop/product-page.html" class="btn btn-primary my-2">Go to product</a>
                                 </div>
                             </div>
                         </div>
@@ -216,7 +216,7 @@
                                     </div>
                                     <hr class="my-2">
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, delectus. Dolor eum aut nam totam.</p>
-                                    <a href="#" class="btn btn-primary my-2">Go to product</a>
+                                    <a href="https://tigransaharian.github.io/Furniture-shop/product-page.html" class="btn btn-primary my-2">Go to product</a>
                                 </div>
                             </div>
                         </div>
@@ -238,7 +238,7 @@
                                     </div>
                                     <hr class="my-2">
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, delectus. Dolor eum aut nam totam.</p>
-                                    <a href="#" class="btn btn-primary my-2">Go to product</a>
+                                    <a href="https://tigransaharian.github.io/Furniture-shop/product-page.html" class="btn btn-primary my-2">Go to product</a>
                                 </div>
                             </div>
                         </div>
@@ -260,7 +260,7 @@
                                     </div>
                                     <hr class="my-2">
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, delectus. Dolor eum aut nam totam.</p>
-                                    <a href="#" class="btn btn-primary my-2">Go to product</a>
+                                    <a href="https://tigransaharian.github.io/Furniture-shop/product-page.html" class="btn btn-primary my-2">Go to product</a>
                                 </div>
                             </div>
                         </div>
