--- a/product-page.html
+++ b/product-page.html
@@ -213,7 +213,7 @@
                                         </div>
                                         <hr class="my-2">
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, delectus. Dolor eum aut nam totam.</p>
-                                        <a href="#" class="btn btn-primary my-2">Go to product</a>
+                                        <a href="https://tigransaharian.github.io/Furniture-shop/product-page.html" class="btn btn-primary my-2">Go to product</a>
                                     </div>
                                 </div>
                             </div>
@@ -235,7 +235,7 @@
                                         </div>
                                         <hr class="my-2">
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, delectus. Dolor eum aut nam totam.</p>
-                                        <a href="#" class="btn btn-primary my-2">Go to product</a>
+                                        <a href="https://tigransaharian.github.io/Furniture-shop/product-page.html" class="btn btn-primary my-2">Go to product</a>
                                     </div>
                                 </div>
                             </div>
@@ -257,7 +257,7 @@
                                         </div>
                                         <hr class="my-2">
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, delectus. Dolor eum aut nam totam.</p>
-                                        <a href="#" class="btn btn-primary my-2">Go to product</a>
+                                        <a href="https://tigransaharian.github.io/Furniture-shop/product-page.html" class="btn btn-primary my-2">Go to product</a>
                                     </div>
                                 </div>
                             </div>
@@ -279,7 +279,7 @@
                                         </div>
                                         <hr class="my-2">
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, delectus. Dolor eum aut nam totam.</p>
-                                        <a href="#" class="btn btn-primary my-2">Go to product</a>
+                                        <a href="https://tigransaharian.github.io/Furniture-shop/product-page.html" class="btn btn-primary my-2">Go to product</a>
                                     </div>
                                 </div>
                             </div>
@@ -301,7 +301,7 @@
                                         </div>
                                         <hr class="my-2">
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, delectus. Dolor eum aut nam totam.</p>
-                                        <a href="#" class="btn btn-primary my-2">Go to product</a>
+                                        <a href="https://tigransaharian.github.io/Furniture-shop/product-page.html" class="btn btn-primary my-2">Go to product</a>
                                     </div>
                                 </div>
                             </div>
@@ -323,7 +323,7 @@
                                         </div>
                                         <hr class="my-2">
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, delectus. Dolor eum aut nam totam.</p>
-                                        <a href="#" class="btn btn-primary my-2">Go to product</a>
+                                        <a href="https://tigransaharian.github.io/Furniture-shop/product-page.html" class="btn btn-primary my-2">Go to product</a>
                                     </div>
                                 </div>
                             </div>
@@ -345,7 +345,7 @@
                                         </div>
                                         <hr class="my-2">
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, delectus. Dolor eum aut nam totam.</p>
-                                        <a href="#" class="btn btn-primary my-2">Go to product</a>
+                                        <a href="https://tigransaharian.github.io/Furniture-shop/product-page.html" class="btn btn-primary my-2">Go to product</a>
                                     </div>
                                 </div>
                             </div>
@@ -367,7 +367,7 @@
                                         </div>
                                         <hr class="my-2">
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, delectus. Dolor eum aut nam totam.</p>
-                                        <a href="#" class="btn btn-primary my-2">Go to product</a>
+                                        <a href="https://tigransaharian.github.io/Furniture-shop/product-page.html" class="btn btn-primary my-2">Go to product</a>
                                     </div>
                                 </div>
                             </div>
