--- a/product-page.html
+++ b/product-page.html
@@ -16,10 +16,14 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-dark justify-content-between d-flex">
-            <a class="navbar-brand my-1" href="index.html"><img src="assets/logo/logo.png" alt=""></a>
+            <a class="navbar-brand my-1" href="index.html"><img src="./assets/logo/logo.png" alt=""></a>
             <div class="contact-information my-1">
-                <i class="fas fa-phone-square-alt"></i>
-                <p>+7 940 725 625 85</p>
+                <div class="contact-phone">
+                    <i class="fas fa-phone-square-alt"></i>
+                    <p>+7 940 725 625 85</p>
+                </div>
+                <span>|</span>
+                <a href="#" class="wish-list"><i class="fas fa-heart"></i><span>1</span></a>
             </div>
             <form class="form-inline my-1">
                 <input class="form-control mr-2" type="search" placeholder="Search" aria-label="Search">
