--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                         </div>
                         <div class="col-12">
                             <div class="w-100 text-center my-3">
-                                <a href="/category-page.html" class="btn btn-primary">all categories</a>
+                                <a href="https://tigransaharian.github.io/Furniture-shop/category-page.html" class="btn btn-primary">all categories</a>
                             </div>
                         </div>
                     </div>
