--- a/category-page.html
+++ b/category-page.html
@@ -90,7 +90,7 @@
                         <div class="col-xl-4 col-lg-4 col-md-4 col-6">
                             <div class="card-category">
                                 <div class="card">
-                                    <div class="card-image card-image-bedroom"></div>
+                                    <div class="card-image" style="background-image: url(./assets/item-image/item-1.jpg);"></div>
                                     <div class="card-body">
                                         <h5 class="card-title">category name</h5>
                                     </div>
@@ -100,7 +100,7 @@
                         <div class="col-xl-4 col-lg-4 col-md-4 col-6">
                             <div class="card-category">
                                 <div class="card">
-                                    <div class="card-image card-image-garderob"></div>
+                                    <div class="card-image" style="background-image: url(./assets/item-image/item-2.jpg);"></div>
                                     <div class="card-body">
                                         <h5 class="card-title">category name</h5>
                                     </div>
@@ -110,7 +110,7 @@
                         <div class="col-xl-4 col-lg-4 col-md-4 col-6">
                             <div class="card-category">
                                 <div class="card">
-                                    <div class="card-image card-image-kids-room"></div>
+                                    <div class="card-image" style="background-image: url(./assets/item-image/item-3.jpg);"></div>
                                     <div class="card-body">
                                         <h5 class="card-title">category name</h5>
                                     </div>
@@ -120,7 +120,7 @@
                         <div class="col-xl-4 col-lg-4 col-md-4 col-6">
                             <div class="card-category">
                                 <div class="card">
-                                    <div class="card-image card-image-living-room"></div>
+                                    <div class="card-image" style="background-image: url(./assets/item-image/item-2.jpg);"></div>
                                     <div class="card-body">
                                         <h5 class="card-title">category name</h5>
                                     </div>
@@ -130,7 +130,7 @@
                         <div class="col-xl-4 col-lg-4 col-md-4 col-6">
                             <div class="card-category">
                                 <div class="card">
-                                    <div class="card-image card-image-kitchen"></div>
+                                    <div class="card-image" style="background-image: url(./assets/item-image/item-4.jpg);"></div>
                                     <div class="card-body">
                                         <h5 class="card-title">category name</h5>
                                     </div>
@@ -140,7 +140,7 @@
                         <div class="col-xl-4 col-lg-4 col-md-4 col-6">
                             <div class="card-category">
                                 <div class="card">
-                                    <div class="card-image card-image-bedroom"></div>
+                                    <div class="card-image" style="background-image: url(./assets/item-image/item-5.jpg);"></div>
                                     <div class="card-body">
                                         <h5 class="card-title">category name</h5>
                                     </div>
