--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 <div class="col-12">
                     <div class="row">
                         <div class="col-xl-4 col-lg-4 col-md-4 col-6">
-                            <div class="card-category">
+                            <div class="card-category" onclick="location.href='https://tigransaharian.github.io/Furniture-shop/product-list-page.html'">
                                 <div class="card">
                                     <div class="card-image" style="background-image: url(./assets/item-image/item-1.jpg);"></div>
                                     <div class="card-body">
@@ -130,7 +130,7 @@
                             </div>
                         </div>
                         <div class="col-xl-4 col-lg-4 col-md-4 col-6">
-                            <div class="card-category">
+                            <div class="card-category" onclick="location.href='https://tigransaharian.github.io/Furniture-shop/product-list-page.html'">
                                 <div class="card">
                                     <div class="card-image" style="background-image: url(./assets/item-image/item-2.jpg);"></div>
                                     <div class="card-body">
@@ -140,7 +140,7 @@
                             </div>
                         </div>
                         <div class="col-xl-4 col-lg-4 col-md-4 col-6">
-                            <div class="card-category">
+                            <div class="card-category" onclick="location.href='https://tigransaharian.github.io/Furniture-shop/product-list-page.html'">
                                 <div class="card">
                                     <div class="card-image" style="background-image: url(./assets/item-image/item-3.jpg);"></div>
                                     <div class="card-body">
@@ -150,7 +150,7 @@
                             </div>
                         </div>
                         <div class="col-xl-4 col-lg-4 col-md-4 col-6">
-                            <div class="card-category">
+                            <div class="card-category" onclick="location.href='https://tigransaharian.github.io/Furniture-shop/product-list-page.html'">
                                 <div class="card">
                                     <div class="card-image" style="background-image: url(./assets/item-image/item-2.jpg);"></div>
                                     <div class="card-body">
@@ -160,7 +160,7 @@
                             </div>
                         </div>
                         <div class="col-xl-4 col-lg-4 col-md-4 col-6">
-                            <div class="card-category">
+                            <div class="card-category" onclick="location.href='https://tigransaharian.github.io/Furniture-shop/product-list-page.html'">
                                 <div class="card">
                                     <div class="card-image" style="background-image: url(./assets/item-image/item-4.jpg);"></div>
                                     <div class="card-body">
@@ -170,7 +170,7 @@
                             </div>
                         </div>
                         <div class="col-xl-4 col-lg-4 col-md-4 col-6">
-                            <div class="card-category">
+                            <div class="card-category" onclick="location.href='https://tigransaharian.github.io/Furniture-shop/product-list-page.html'">
                                 <div class="card">
                                     <div class="card-image" style="background-image: url(./assets/item-image/item-5.jpg);"></div>
                                     <div class="card-body">
