--- a/index.html
+++ b/index.html
@@ -767,7 +767,7 @@
                                 <li><a href="#"><i class="fab fa-facebook-square"></i></a></li>
                                 <li><a href="#"><i class="fab fa-instagram-square"></i></a></li>
                                 <li><a href="#"><i class="fab fa-odnoklassniki-square"></i></a></li>
-                                <li><a href="#"><i class="fab fa-whatsapp-square"></i></a></li>
+                                <li><a href="https://api.whatsapp.com/send?phone=+374(your number)"><i class="fab fa-whatsapp-square"></i></a></li>
                             </ul>
                         </div>
                     </div>
